Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 style="color: #ffd700;">المهام والاشتراكات</h2>
         <div class="task-card">
             <p>اشترك في قناة البوت الرسمية</p>
-            <button class="btn-action" onclick="window.open('https://t.me/Bitco93_official_bot')">انضم الآن</button>
+            <button class="btn-action" onclick="window.open('https://t.me/Bitco93_official_bot','_blank')">انضم الآن</button>
         </div>
         <div class="task-card">
             <p>تابعنا على تلجرام (قناة الربح)</p>
