--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+imgCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -70,7 +70,8 @@
 
     <div id="home" class="tab-content active-tab">
         <classss="balance" id="score">0</div>
- <img src="https://api.telegram.org/file/bot8276440980:AAFczGTZ6VL1HALMt0IDXrE4cdLNE593AeI/photos/file_0.jpg" class="coin-btn" onclick="mine()" id="coin" style="width: 250px; border-radius: 50%;">
+<img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/20de4ce6-991a-4d51-8c7b-587442cab07c.png" class="coin-btn" onclick="mine()" id="coin" style="width: 200px; height: auto; display: block; margin: 0 auto;">
+
 
         <p style="color: #ffd700; margin-top: 20px; font-weight: bold;">اضغط للربح!</p>
     </div>
@@ -86,7 +87,7 @@
     <div id="wallet" class="tab-content">
         <h2 style="color: #ffd700;">محفظة TON</h2>
         <div style="margin-top: 50px;">
-            <p>رصيدك الحالي: <span id="wallet-balance" style="color: #ffd700;">0</span> عملة</p>
+            <p>رصيدك الحالي: <span id="wallet-balance" sstyle"color: #ffd700;">0</span> عملة</p>
             <button class="btn-action" style="width: 80%; padding: 15px;" onclick="connectTON()">ربط محفظة TON Connect</button>
         </div>
     </div>
