--- a/index.html
+++ b/index.html
@@ -1,133 +1,84 @@
-imgCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitco93 Mining</title>
-    <style>
-        /* إضافة صورة خلفية بدلاً من اللون الأسود */
-        body { 
-            background: url('https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/input_file_0.png') no-repeat center center fixed; 
-            background-size: cover;
-            color: white; 
-            text-align: center; 
-            font-family: Arial, sans-serif; 
-            margin: 0; 
-            overflow: hidden; 
-        }
+from fastapi import FastAPI, APIRouter, HTTPException
+from dotenv import load_dotenv
+from starlette.middleware.cors import CORSMiddleware
+from motor.motor_asyncio import AsyncIOMotorClient
+import os
+from pathlib import Path
+from pydantic import BaseModel, Field, ConfigDict
+from typing import List, Optional
+from datetime import datetime, timezone
 
-        /* طبقة عاتمة فوق الخلفية لتوضيح العناصر */
-        .overlay {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.8); /* تعتيم بنسبة 80% */
-            z-index: -1;
-        }
+# إعداد المسارات وتحميل الإعدادات
+ROOT_DIR = Path(__file__).parent
+load_dotenv(ROOT_DIR / '.env')
 
-        /* شاشة الفتح (Loading) */
-        #loading-screen {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: #000;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
+app = FastAPI(title="Bitco93 Backend Server")
 
-        .loader {
-            border: 5px solid #333;
-            border-top: 5px solid #ffd700;
-            border-radius: 50%;
-            width: 50px; height: 50px;
-            animation: spin 1s linear infinite;
-        }
+# تفعيل CORS لضمان اتصال واجهة البوت (index.html) بالسيرفر دون مشاكل
+app.add_middleware(
+    CORSMiddleware,
+    allow_origins=["*"],
+    allow_credentials=True,
+    allow_methods=["*"],
+    allow_headers=["*"],
+)
 
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+# الاتصال بقاعدة البيانات MongoDB
+MONGO_URL = os.getenv('MONGO_URL', 'mongodb://localhost:27017')
+DB_NAME = os.getenv('DB_NAME', 'bitco93_db')
+client = AsyncIOMotorClient(MONGO_URL)
+db = client[DB_NAME]
 
-        .balance { font-size: 50px; color: #ffd700; font-weight: bold; margin-top: 30px; }
-        .tab-content { display: none; padding: 20px; height: 70vh; overflow-y: auto; }
-        .active-tab { display: block; }
-        .coin-balance { width: 260px; cursor: pointer; transition: transform 0.1s; filter: drop-shadow(0 0 20px #ffd700); margin-top: 20px; }
-        .coin-btn:active { transform: scale(0.9); }
-        .footer { position: fixed; bottom: 0; width: 100%; display: flex; justify-content: space-around; background: rgba(17, 17, 17, 0.9); padding: 15px 0; border-top: 2px solid #333; }
-        .nav-btn { background: none; border: none; color: #888; font-size: 14px; cursor: pointer; display: flex; flex-direction: column; align-items: center; }
-        .nav-btn.active { color: #ffd700; font-weight: bold; }
-        .task-card { background: rgba(26, 26, 26, 0.8); border: 1px solid #333; padding: 15px; border-radius: 12px; margin-bottom: 10px; text-align: right; }
-        .btn-action { background: #ffd700; color: #000; border: none; padding: 8px 15px; border-radius: 8px; font-weight: bold; cursor: pointer; }
-    </style>
-</head>
-<body>
+api_router = APIRouter(prefix="/api")
 
-    <div id="loading-screen">
-        <img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/input_file_0.png" width="150" style="margin-bottom: 20px;">
-        <div class="loader"></div>
-        <p style="color: #ffd700; margin-top: 15px;">جاري تحميل Bitco93...</p>
-    </div>
+# --- النماذج (Models) ---
 
-    <div class="overlay"></div>
+class User(BaseModel):
+    model_config = ConfigDict(extra="ignore")
+    telegram_id: str
+    username: Optional[str] = None
+    first_name: Optional[str] = None
+    score: int = 0
+    referral_code: str
+    referred_by: Optional[str] = None
+    # الصورة التي طلبتها لتكون خلفية أو صورة افتراضية
+    bg_image: str = "https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/1000500548.png"
+    completed_tasks: List[str] = []
+    created_at: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))
 
-    <div id="home" class="tab-content active-tab">
-        <classss="balance" id="score">0</div>
-<img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/20de4ce6-991a-4d51-8c7b-587442cab07c.png" class="coin-btn" onclick="mine()" id="coin" style="width: 200px; height: auto; display: block; margin: 0 auto;">
+class TaskVerify(BaseModel):
+    telegram_id: str
+    task_id: str
 
+# --- العمليات (Routes) ---
 
-        <p style="color: #ffd700; margin-top: 20px; font-weight: bold;">اضغط للربح!</p>
-    </div>
+# 1. تسجيل الدخول وجلب بيانات المستخدم
+@api_router.post("/login")
+async def login(user_data: User):
+    user = await db.users.find_one({"telegram_id": user_data.telegram_id})
+    if not user:
+        user_dict = user_data.dict()
+        await db.users.insert_one(user_dict)
+        return {"status": "success", "user": user_dict}
+    return {"status": "success", "user": user}
 
-    <div id="tasks" class="tab-content">
-        <h2 style="color: #ffd700;">المهام والاشتراكات</h2>
-        <div class="task-card">
-            <p>اشترك في قناة البوت الرسمية</p>
-            <button class="btn-action" onclick="window.open('https://t.me/Bitco93_official_bot')">انضم الآن</button>
-        </div>
-    </div>
+# 2. نظام التحقق من المهام (Task Verification)
+@api_router.post("/tasks/verify")
+async def verify_task(data: TaskVerify):
+    user = await db.users.find_one({"telegram_id": data.telegram_id})
+    if not user:
+        raise HTTPException(status_code=404, detail="User not found")
+    
+    # إضافة المهمة لقائمة المهام المكتملة وزيادة الرصيد (مثلاً 500 نقطة)
+    if data.task_id not in user.get("completed_tasks", []):
+        await db.users.update_one(
+            {"telegram_id": data.telegram_id},
+            {
+                "$push": {"completed_tasks": data.task_id},
+                "$inc": {"score": 500}
+            }
+        )
+        return {"status": "verified", "reward": 500}
+    return {"status": "already_done"}
 
-    <div id="wallet" class="tab-content">
-        <h2 style="color: #ffd700;">محفظة TON</h2>
-        <div style="margin-top: 50px;">
-            <p>رصيدك الحالي: <span id="wallet-balance" sstyle"color: #ffd700;">0</span> عملة</p>
-            <button class="btn-action" style="width: 80%; padding: 15px;" onclick="connectTON()">ربط محفظة TON Connect</button>
-        </div>
-    </div>
-
-    <div class="footer">
-        <button class="nav-btn active" onclick="showTab('home', this)"><span>🏠</sالالرئيسيةية</button>
-        <button class="nav-btn" onclick="showTab('tasks', this)"><span>💰</span>المهام</button>
-        <button class="nav-btn" onclick="showTab('wallet', this)"><span>👛</span>المحفظة</button>
-    </div>
-
-    <script>
-        // إخفاء شاشة التحميل بعد ثانيتين
-        window.onload = function() {
-            setTimeout(() => {
-                document.getElementById('loading-screen').style.display = 'none';
-            }, 2000);
-        };
-
-        let score = parseInt(localStorage.getItem('score')) || 0;
-        document.getElementById('score').innerText = score;
-        document.getElementById('wallet-balance').innerText = score;
-
-        function mine() {
-            score++;
-            document.getElementById('score').innerText = score;
-            document.getElementById('wallet-balance').innerText = score;
-            localStorage.setItem('score', score);
-            if (navigator.vibrate) navigator.vibrate(40);
-        }
-
-        function showTab(tabId, btn) {
-            document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active-tab'));
-            document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-            document.getElementById(tabId).classList.add('active-tab');
-            btn.classList.add('active');
-        }
-
-        function connectTON() {
-            alert("جاري الاتصال بـ TON Connect...");
-        }
-    </script>
-</body>
-</html>
+app.include_router(api_router)
